Fix cropped blocks display in widgets customizer for Login/Register and Search Bar
#660

--- a/src/assets/scss/blocks.scss
+++ b/src/assets/scss/blocks.scss
@@ -128,6 +128,15 @@ body.advgb-editor-width-full:not(.advgb-editor-width-default) #editor {
   }
 }
 
+/* Widgets Customizer */
+.customize-control-sidebar_block_editor .block-editor-writing-flow {
+
+  .advgb-lores-form-wrapper,
+  .advgb-search-bar-inner {
+    width: 100% !important;
+  }
+}
+
 /*Accordion block styles*/
 #editor {
 
